--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 jobs:
   publish-docker:
     name: Publish Docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
     permissions:
       contents: read
@@ -47,7 +47,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
 
       - name: Build and push Docker image to ghcr
         run: |
@@ -64,7 +64,7 @@ jobs:
     needs: publish-docker
     #if: startsWith(github.ref, 'refs/tags/') && success()
     #if: success()
-    if: false    
+    if: false
     concurrency: # Ensures only one deploy job runs at a time
       group: deployment
 
