--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 jobs:
   publish-docker:
     name: Publish Docker
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
     permissions:
       contents: read
@@ -60,7 +60,7 @@ jobs:
 
   deploy-dev:
     name: deploy development app via ssh
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: publish-docker
     #if: startsWith(github.ref, 'refs/tags/') && success()
     #if: success()
@@ -137,7 +137,7 @@ jobs:
 
   deploy-prod:
     name: deploy production version via ssh
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: deploy-dev
     #if: startsWith(github.ref, 'refs/tags/') && success()
     #if: success()
