--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,10 @@ on: [push, pull_request]
 jobs:
   publish-docker:
     name: Publish Docker
+    #runs-on: self-hosted means you need to setup self hosted runners to run this job see https://docs.github.com/en/actions/hosting-your-own-runners/managing-self-hosted-runners/about-self-hosted-runners
     runs-on: self-hosted
-    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
+    #if: startsWith(github.ref, 'refs/tags/') means only runs on tagged commits
+    if: startsWith(github.ref, 'refs/tags/')     
     permissions:
       contents: read
       packages: write
@@ -62,8 +64,8 @@ jobs:
     name: deploy development app via ssh
     runs-on: self-hosted
     needs: publish-docker
+    #if: false means never runs; if: startsWith(github.ref, 'refs/tags/') means only runs on tagged commits, ensure you have setup secrets before trying to deploy
     #if: startsWith(github.ref, 'refs/tags/') && success()
-    #if: success()
     if: false
     concurrency: # Ensures only one deploy job runs at a time
       group: deployment
@@ -81,7 +83,7 @@ jobs:
     steps:
       # Checkout repository
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Set up SSH key for connection
       - name: Set up SSH key
@@ -152,7 +154,7 @@ jobs:
     steps:
       # Checkout repository
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Set up SSH key for connection
       - name: Set up SSH key
