--- a/src/main/docker/Caddyfile
+++ b/src/main/docker/Caddyfile
@@ -8,22 +8,22 @@
 DOMAIN {
 	handle_errors {
 		respond "This production version of the app will only become available after a tagged commit has been made on the main branch.
-		
-		A dev version of the app should be accessible here: http://dev.DOMAIN/
 
-		Error connecting to DOMAIN production app backend on docker host http://teamproject-prd:8080. 
-		
-		After a tagged commit has deployed, wait 30s and refresh this page. If still not live, login to the VM via SSH and try to debug using 'docker compose -f ~/team-project/prd.yml up'"
+		A dev version of the app should be accessible here: http://DEVDOMAIN/
+
+		Error connecting to DOMAIN production app backend on docker host http://teamproject-prd:8080.
+
+		After a tagged commit has deployed, wait 30 seconds and refresh this page. If still not live, login to the VM via SSH and try to debug using 'docker compose -f ~/team-project/prd.yml up'"
 	}
 	reverse_proxy http://teamproject-prd:8080
 }
-dev.DOMAIN {
+DEVDOMAIN {
 	handle_errors {
 		respond "Error
-		
-		Error connecting to dev.DOMAIN development app backend on docker host http://teamproject-dev:8080. 
-		
-		After 30s refresh this page. If still not live, login to the VM via SSH and try to debug using 'docker compose -f ~/team-project/dev.yml up'"
+
+		Error connecting to DEVDOMAIN development app backend on docker host http://teamproject-dev:8080.
+
+		After 30 seconds refresh this page. If still not live, login to the VM via SSH and try to debug using 'docker compose -f ~/team-project/dev.yml up'"
 	}
 	reverse_proxy http://teamproject-dev:8080
 }
