--- a/src/main/docker/dev.yml
+++ b/src/main/docker/dev.yml
@@ -7,8 +7,8 @@ services:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,api-docs
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://teamproject-postgresql:5432/teamprofiles
-      - SPRING_LIQUIBASE_URL=jdbc:postgresql://teamproject-postgresql:5432/teamprofiles
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://teamproject-postgresql:5432/teamproject24
+      - SPRING_LIQUIBASE_URL=jdbc:postgresql://teamproject-postgresql:5432/teamproject24
       - JHIPSTER_SLEEP=10 # gives time for other services to boot before the application
     # If you want to expose these ports outside your dev machine,
     # remove the "127.0.0.1:" prefix
@@ -19,11 +19,11 @@ services:
   teamproject-postgresql:
     image: postgres:14.5
     restart: always
-    # to make the database content remain between deployments, uncomment the following two lines
+    # dev database is reset each run to make the database content remain between deployments, uncomment the following two lines
     # volumes:
     #   - ~/dev/volumes/jhipster/teamproject/postgresql/:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=teamproject
+      - POSTGRES_USER=teamproject24
       - POSTGRES_PASSWORD=
       - POSTGRES_HOST_AUTH_METHOD=trust
     # If you want to expose these ports outside your dev machine,
