--- a/src/main/docker/prd.yml
+++ b/src/main/docker/prd.yml
@@ -7,8 +7,8 @@ services:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,api-docs
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://teamproject-postgresql-prd:5433/teamprofiles
-      - SPRING_LIQUIBASE_URL=jdbc:postgresql://teamproject-postgresql-prd:5433/teamprofiles
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://teamproject-postgresql-prd:5433/teamproject24
+      - SPRING_LIQUIBASE_URL=jdbc:postgresql://teamproject-postgresql-prd:5433/teamproject24
       - JHIPSTER_SLEEP=15 # gives time for other services to boot before the application
     ports:
       - 9090:8080
@@ -17,11 +17,11 @@ services:
   teamproject-postgresql-prd:
     image: postgres:14.5
     restart: always
-    # to delete the database content between deployments, comment the following two lines  .everything
+    # to delete the database content between deployments, comment the following two lines
     volumes:
       - ~/prd/volumes/jhipster/teamproject/postgresql/:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=teamprofiles
+      - POSTGRES_USER=teamproject24
       - POSTGRES_PASSWORD=
       - POSTGRES_HOST_AUTH_METHOD=trust
       - PGPORT= 5433
