--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,7 +123,7 @@ jobs:
                ACME=${{ env.ACME_STAGING }} \
                DEVURL=${{ env.DEVURL }} \
                URL=${{ env.URL }} \
-               DEPLOY_IP=${{ env.DEPLOY_IP }} \
+               DEPLOY_IP=${{ secrets.DEPLOY_IP }} \
                EMAIL=${{ github.event.head_commit.author.email }} > src/main/docker/.env
 
       # SSH into the VM and ensure Docker is installed, delete previous folder
