--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,8 @@ jobs:
   publish-docker:
     name: Publish Docker
     #runs-on: self-hosted means you need to setup self hosted runners to run this job see https://docs.github.com/en/actions/hosting-your-own-runners/managing-self-hosted-runners/about-self-hosted-runners
+    if: contains(github.ref, 'refs/heads/main')
     runs-on: self-hosted
-    #if: startsWith(github.ref, 'refs/tags/') means only runs on tagged commits
-    if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: read
       packages: write
@@ -67,10 +66,8 @@ jobs:
     name: deploy development app via ssh
     runs-on: self-hosted
     needs: publish-docker
-    #if: false means never runs;
     #if: success() means previous stages must pass;
-    #if: startsWith(github.ref, 'refs/tags/') means only runs on tagged commits, ensure you have setup secrets before trying to deploy
-    if: startsWith(github.ref, 'refs/tags/') && success()
+    if: success() && contains(github.ref, 'refs/heads/main')
     concurrency: # Ensures only one deploy job runs at a time
       group: deployment
 
@@ -148,10 +145,7 @@ jobs:
     name: deploy production version via ssh
     runs-on: self-hosted
     needs: deploy-dev
-    if: "startsWith(github.ref, 'refs/tags/') && success() && contains(github.event.head_commit.message, '[production]') && contains(github.event.pull_request.title, '[production]')"
-    #if: startsWith(github.ref, 'refs/tags/') && success()
-    #if: success()
-    #if: false
+    if: "success() && contains(github.ref, 'refs/heads/main') && startsWith(github.ref, 'refs/tags/')"
 
     concurrency: # Ensures only one deploy job runs at a time
       group: deployment
