--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,9 @@ on: [push, pull_request]
 jobs:
   publish-docker:
     name: Publish Docker
-    #runs-on: self-hosted means you need to setup self hosted runners to run this job see https://docs.github.com/en/actions/hosting-your-own-runners/managing-self-hosted-runners/about-self-hosted-runners
-    if: contains(github.ref, 'refs/heads/main')
+    if: contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')
+    #runs-on: self-hosted means you need to set up self-hosted runners to run this job
+    #see https://docs.github.com/en/actions/hosting-your-own-runners/managing-self-hosted-runners/about-self-hosted-runners
     runs-on: self-hosted
     permissions:
       contents: read
@@ -67,7 +68,7 @@ jobs:
     runs-on: self-hosted
     needs: publish-docker
     #if: success() means previous stages must pass;
-    if: success() && contains(github.ref, 'refs/heads/main')
+    if: success() && ( contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') )
     concurrency: # Ensures only one deploy job runs at a time
       group: deployment
 
