--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,13 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-v1-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2-v1-
+
       - name: Build and push Docker image to ghcr
         run: |
           echo "pushing ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.sha }}"
@@ -146,7 +153,7 @@ jobs:
     name: deploy production version via ssh
     runs-on: self-hosted
     needs: deploy-dev
-    if: "success() && contains(github.ref, 'refs/heads/main') && startsWith(github.ref, 'refs/tags/')"
+    if: success() && ( contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') )
 
     concurrency: # Ensures only one deploy job runs at a time
       group: deployment
