--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ jobs:
   publish-docker:
     name: Publish Docker
     if: contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')
+    concurrency: # Ensures only one deploy job runs at a time
+      group: deployment-${{ github.workflow }}-${{ github.ref }}
     #runs-on: self-hosted means you need to set up self-hosted runners to run this job
     #see https://docs.github.com/en/actions/hosting-your-own-runners/managing-self-hosted-runners/about-self-hosted-runners
     runs-on: self-hosted
@@ -50,13 +52,14 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+          cache: 'maven'
 
-      - name: Cache Maven packages
+      - name: Cache node modules
         uses: actions/cache@v3
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-v1-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2-v1-
+          path: node_modules
+          key: node_modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: node_modules-
 
       - name: Build and push Docker image to ghcr
         run: |
@@ -77,7 +80,7 @@ jobs:
     #if: success() means previous stages must pass;
     if: success() && ( contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') )
     concurrency: # Ensures only one deploy job runs at a time
-      group: deployment
+      group: deployment-${{ github.workflow }}-${{ github.ref }}
 
     env:
       RSA_PRIVATE_KEY: ${{secrets.RSA_PRIVATE_KEY}}
@@ -153,10 +156,10 @@ jobs:
     name: deploy production version via ssh
     runs-on: self-hosted
     needs: deploy-dev
-    if: success() && ( contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') )
+    if: success() && startsWith(github.ref, 'refs/tags/')
 
     concurrency: # Ensures only one deploy job runs at a time
-      group: deployment
+      group: deployment-${{ github.workflow }}-${{ github.ref }}
 
     env:
       RSA_PRIVATE_KEY: ${{secrets.RSA_PRIVATE_KEY}}
