--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     name: Publish Docker
     if: contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/')
     concurrency: # Ensures only one deploy job runs at a time
-      group: deployment-${{ github.workflow }}-${{ github.ref }}
+      group: deployment
     #runs-on: self-hosted means you need to set up self-hosted runners to run this job
     #see https://docs.github.com/en/actions/hosting-your-own-runners/managing-self-hosted-runners/about-self-hosted-runners
     runs-on: self-hosted
@@ -52,7 +52,13 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-          cache: 'maven'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-v1-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2-v1-
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -80,7 +86,7 @@ jobs:
     #if: success() means previous stages must pass;
     if: success() && ( contains(github.ref, 'refs/heads/main') || startsWith(github.ref, 'refs/tags/') )
     concurrency: # Ensures only one deploy job runs at a time
-      group: deployment-${{ github.workflow }}-${{ github.ref }}
+      group: deployment
 
     env:
       RSA_PRIVATE_KEY: ${{secrets.RSA_PRIVATE_KEY}}
@@ -159,7 +165,7 @@ jobs:
     if: success() && startsWith(github.ref, 'refs/tags/')
 
     concurrency: # Ensures only one deploy job runs at a time
-      group: deployment-${{ github.workflow }}-${{ github.ref }}
+      group: deployment
 
     env:
       RSA_PRIVATE_KEY: ${{secrets.RSA_PRIVATE_KEY}}
