fixed custom reverse_proxy URL in Caddyfile

--- a/src/main/docker/Caddyfile
+++ b/src/main/docker/Caddyfile
@@ -46,4 +46,4 @@ DEPLOY_IP:80 {
 # 1) request a DNS entry for sceleton.bham.team pointing at the Virtual Machine IP address (DEPLOY_IP) https://forms.office.com/e/C0kaiRMuDD
 # 2) uncomment/replace '#CUSTOMURL' with 'sceleton.bham.team' in the git repo file src/main/docker/Caddyfile
 # 3) make a tagged commit
-#CUSTOMURL { reverse_proxy http://teamproject-prod:8080 }
+#CUSTOMURL { reverse_proxy http://teamproject-prd:8080 }
