--- a/src/main/docker/Caddyfile
+++ b/src/main/docker/Caddyfile
@@ -44,7 +44,7 @@ DEPLOY_IP:80 {
 
 #to serve on a CUSTOMURL e.g. sceletons.bham.team
 # 1) request a DNS entry for sceletons.bham.team pointing at the Virtual Machine IP address (DEPLOY_IP) https://forms.office.com/e/C0kaiRMuDD
-# 2) replace '#CUSTOMURL' with 'sceletons.bham.team', uncomment the last 3 lines of the file (lines 49-51) in the git repo file src/main/docker/Caddyfile
+# 2) replace '#CUSTOMURL' with 'sceletons.bham.team', uncomment the last lines of the file (lines 49-54) in the git repo file src/main/docker/Caddyfile
 # 3) make a tagged commit
 #CUSTOMURL {
 #  handle_errors {
